--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="section_1">
         <div class="half_width">
             <h1>Welcome to</h1>
             <h1><span class="orange">Peter Parker</span> world !</h1>
@@ -29,6 +29,23 @@
         <div class="half_width">
             <img src="images/fahim_iiuc.jpg" alt="">
         </div>
+    </section>
+
+    <section class="section_1">
+        <div>
+            <img src="images/my-bg2 (1).jpg" alt="">
+
+        </div>
+
+        <div class="half_width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.
+            </p>
+            <a class="button" target="_blank" href="https://dreambigfilm.com/"> DOWNLOAD RESUME</a>
+        </div>
+
     </section>
 
 </body>
