--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="section_1">
+    <section id="section_1" class="flexing">
         <div class="half_width">
             <h1>Welcome to</h1>
             <h1><span class="orange">Peter Parker</span> world !</h1>
@@ -31,7 +31,7 @@
         </div>
     </section>
 
-    <section class="section_1">
+    <section id="section_2" class="flexing">
         <div>
             <img src="images/my-bg2 (1).jpg" alt="">
 
@@ -44,6 +44,26 @@
                 to make simple website. My goal is to build 3 websites and learn advanced topics.
             </p>
             <a class="button" target="_blank" href="https://dreambigfilm.com/"> DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
+    <section id="section_3">
+        <h1 class="half_width">Experiences</h1>
+        <div class="flexing">
+            <div class="half_width">
+                <h1>Full Stack Web Developer</h1>
+                <h3>2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website
+                    functio,efficient. I didn't stop with the web. I went beyond with most popular Javascript framework
+                    called VueJS.I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="half_width">
+                <h1>Baby Web Developer</h1>
+                <h3>2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
         </div>
 
     </section>
