--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
     <section id="section_3">
         <h1 class="half_width">Experiences</h1>
         <div class="flexing">
-            <div class="half_width">
+            <div class="half_width shadowing_and_adjusting" id="section_3_div_2">
                 <h1>Full Stack Web Developer</h1>
-                <h3>2021-Present | Pro Level Developer</h3>
+                <h3 class="orange">2021-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website
                     functio,efficient. I didn't stop with the web. I went beyond with most popular Javascript framework
                     called VueJS.I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="half_width">
+            <div class="half_width shadowing_and_adjusting" id="section_3_div_3">
                 <h1>Baby Web Developer</h1>
-                <h3>2020-2021 | Programming Hero Learner</h3>
+                <h3 class="orange">2020-2021 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
                     showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
                 </p>
@@ -69,5 +69,9 @@
     </section>
 
 </body>
+
+<footer>
+    <h5>© Peter Parker 2023, a Programming Hero initiative.</h5>
+</footer>
 
 </html>
